Fix title spacing

--- a/eagle/static/css/index.css
+++ b/eagle/static/css/index.css
@@ -119,7 +119,8 @@ section {
     display: inline-block;
     margin-left: 50px;
     margin-top: 100px;
-    padding: 7px;
+    padding: 10px;
+    padding-bottom: 0px;
 }
 
 .section-description {
